update scss to fix color and some files

--- a/assets/css/modules/_header.sass
+++ b/assets/css/modules/_header.sass
@@ -15,6 +15,10 @@
     text-decoration: none
     color: $white
 
+    .logo-lkw
+      width: 50px
+      height: 38px
+
     p
       margin: 0 0 0 10px
       font-size: 16px
