--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -347,6 +347,9 @@ body {
     align-items: center;
     text-decoration: none;
     color: #fff; }
+    .header--logo .logo-lkw {
+      width: 50px;
+      height: 38px; }
     .header--logo p {
       margin: 0 0 0 10px;
       font-size: 16px;
@@ -468,6 +471,9 @@ body {
   .intro--banner {
     position: relative;
     height: 475px; }
+    .intro--banner .homepage-bckg {
+      width: 511px;
+      height: 463px; }
     .intro--banner::before {
       content: "";
       position: absolute;
@@ -858,7 +864,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../img/contact-visual.png");
+  background-image: url("../img/bckcontact.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat; }
