--- a/assets/css/modules/_intro.sass
+++ b/assets/css/modules/_intro.sass
@@ -14,6 +14,10 @@
   &--banner
     position: relative
     height: 475px
+    
+    .homepage-bckg
+      width: 511px
+      height: 463px
 
     &::before
       content: ""
